# nix-buildkite-plugin

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  fourmolu.yaml  jobs.nix  nix-buildkite-plugin.cabal  nix-buildkite.cabal  plugin.yml
.buildkite/: pipeline.yml
.github/workflows/: bump-nix-deps.yaml  check-dco.yaml  push-to-ghcr.yaml
exe-nix-buildkite/: Main.hs
hooks/: command
nix/: pkgs.nix
nix/overlays/: haskell-packages.nix
nix/pkgs/nix-buildkite-tests/: default.nix
scripts/: with-nix-eval-jobs.sh
tests/: flake.nix  jobs-agent-tags.goldplate  jobs-agent-tags.stdout  jobs-post-build-hook.goldplate  jobs-post-build-hook.stdout  jobs.goldplate  jobs.nix  jobs.stdout
