cabal-version:      3.0
name:               nix-buildkite-plugin
version:            0.2.0.0
license-file:       LICENSE
author:             Hackworth Ltd <src@hackworthltd.com>
maintainer:         src@hackworthltd.com
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable nix-buildkite
  main-is:          Main.hs
  build-depends:
    , aeson                 >=2.0       && <2.2
    , algebraic-graphs      ^>=0.6
    , attoparsec            ^>=0.14
    , base                  >=4.12      && <4.19
    , bytestring            >=0.10.8.2  && <0.12.0
    , containers            ^>=0.6.0.1
    , filepath              ^>=1.4.2.1
    , nix-derivation        ^>=1.1.1
    , process               ^>=1.6.5.0
    , text                  ^>=2.0
    , unordered-containers  ^>=0.2.10.0

  default-language: Haskell2010
  hs-source-dirs:   exe-nix-buildkite
  ghc-options:
    -Wcompat -Wall -fwarn-incomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields
    -Wredundant-constraints -Wmissing-export-lists
