cabal-version:      3.0
name:               nix-buildkite-plugin
version:            0.2.0.0
license-file:       LICENSE
author:             Hackworth Ltd <src@hackworthltd.com>
maintainer:         src@hackworthltd.com
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable nix-buildkite
  main-is:            Main.hs
  build-depends:
    , aeson                 ^>=2.2.1
    , algebraic-graphs      ^>=0.7
    , attoparsec            ^>=0.14
    , base                  >=4.12      && <4.22
    , bytestring            >=0.11      && <0.13.0
    , containers            ^>=0.6.8
    , filepath              ^>=1.4
    , nix-derivation        ^>=1.1.2
    , protolude             ^>=0.3.5
    , text                  ^>=2.1
    , unordered-containers  ^>=0.2.19
    , vector                ^>=0.13.2.0

  default-language:   GHC2021
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  hs-source-dirs:     exe-nix-buildkite
  ghc-options:
    -Wcompat -Wall -fwarn-incomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields
    -Wredundant-constraints -Wmissing-export-lists -threaded -rtsopts
    -with-rtsopts=-N
